--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
 
 # Welcome
 
-Bla bla bla bla. Bla bla bla bla bla bla bla bla.
+Bla bla bla bla. No more bla bla.
 
 <table>
     <th>
